--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>world-hystrixdashboard</module>
         <module>world-turbine-client</module>
         <module>world-turbine-server</module>
+        <module>world-config-server</module>
+        <module>world-config-local-server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -56,7 +58,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -82,6 +87,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
     </dependencies>
 
