--- a/world-config-local-server/src/main/resources/application.yml
+++ b/world-config-local-server/src/main/resources/application.yml
@@ -1,21 +1,19 @@
-world-provide: http://WORLD-PROVIDE
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-      cors:
-        allowed-origins: "*"
-        allowed-methods: "*"
 server:
-  port: 8681
+  port: 9980
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8880/eureka,http://dmx:8881/eureka
 spring:
   application:
-    name: world-consumer
+    name: world-config-server
+  profiles:
+    active: native
+  cloud:
+    config:
+      server:
+        native:
+          search-locations: classpath:/config
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
       url: jdbc:mysql://localhost:3306/world?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT%2B8
@@ -32,4 +30,4 @@ spring:
         max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
-    timeout: 10000 # 连接超时时间（毫秒）
+    timeout: 10000 # 连接超时时间（毫秒
