--- a/world-config-local-server/src/main/resources/config/world-consumer-8681.yml
+++ b/world-config-local-server/src/main/resources/config/world-consumer-8681.yml
@@ -1,3 +1,4 @@
+world-provide: http://WORLD-PROVIDE
 management:
   endpoints:
     web:
@@ -7,17 +8,17 @@ management:
         allowed-origins: "*"
         allowed-methods: "*"
 server:
-  port: 8980
+  port: 8681
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8880/eureka,http://dmx:8881/eureka
 spring:
   application:
-    name: world-hystrixdashboard
+    name: world-consumer
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/world?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/world?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
       username: root
       password: root
   redis:
@@ -32,4 +33,3 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 10000 # 连接超时时间（毫秒）
-
